fix detais